[package]
name = "egui-plotter"
version = "0.1.0"
edition = "2021"
authors = ["Charles Thompson"]
license = "MIT"
readme = "README.md"
keywords = ["plotters", "plotter", "egui", "backend"]
catagories = ["graphics", "gui", "mathematics", "rendering", "visualizatoin"]
description = "Simple to use utilties for integrating plotter into egui"
repository = "https://github.com/Gip-Gip/egui-plotter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
emath = "0.22.0"
epaint = "0.22.0"
plotters-backend = "0.3.4"

[dev-dependencies]
eframe = "0.22.0"
plotters = "0.3.1"
