[package]
name = "egui-plotter"
version = "0.3.0"
edition = "2021"
authors = ["Charles Thompson"]
license = "MIT"
readme = "README.md"
keywords = ["plotters", "plotter", "egui", "backend"]
categories = ["graphics", "gui", "mathematics", "rendering", "visualization"]
description = "Simple to use utilties for integrating plotter into egui"
repository = "https://github.com/Gip-Gip/egui-plotter"
exclude = ["images"]

[features]
timechart = ["dep:instant"]

[dependencies]
egui = "0.29"
plotters-backend = "0.3"
plotters = "0.3"
# if you are using egui then chances are you're using trunk which uses wasm bindgen
instant = { version = "0.1", features = ["wasm-bindgen"], optional = true }

[dev-dependencies]
eframe = "0.29"
# Hacky way to enable features during testing
egui-plotter = { path = ".", version = "0.3", features = ["timechart"] }

[package.metadata.docs.rs]
features = ["timechart"]

[[example]]
name = "spiral"
required-features = ["timechart"]

[[example]]
name = "timechart"
required-features = ["timechart"]
